#17 Actualitzar la versió Java i el servidor d'aplicacions